@@ -9,6 +9,6 @@ Description: The Octave-forge Image package provides functions for
  The package also provides functions for feature extraction, image
  statistics, spatial and geometric transformations, morphological
  operations, linear filtering, and much more.
-Depends: octave (>= 3.6.0), signal (>= 1.2.0)
+Depends: octave (>= 3.8.0), signal (>= 1.2.0)
 License: GPLv3+, MIT, FreeBSD
 Url: http://octave.sf.net
